// Vitest Snapshot v1

exports[`default matches snapshot 1`] = `
<button
  class="py-4 px-6 font-mono text-2xl rounded-lg hover:shadow-none focus:shadow-none focus:outline-8 hover:outline-8 focus:outline-indigo-300 hover:outline-indigo-300 focus:outline-offset-4 hover:outline-offset-4 shadow-lg shadow-slate-300 border-2 border-indigo-600 bg-indigo-600 text-white hover:bg-indigo-700 focus:bg-indigo-700"
>
  some name
</button>
`;

exports[`primary matches snapshot 1`] = `
<button
  class="py-4 px-6 font-mono text-2xl rounded-lg hover:shadow-none focus:shadow-none focus:outline-8 hover:outline-8 focus:outline-indigo-300 hover:outline-indigo-300 focus:outline-offset-4 hover:outline-offset-4 shadow-lg shadow-slate-300 border-2 border-indigo-600 bg-indigo-600 text-white hover:bg-indigo-700 focus:bg-indigo-700"
>
  some name
</button>
`;

exports[`secondary matches snapshot 1`] = `
<button
  class="py-4 px-6 font-mono text-2xl rounded-lg hover:shadow-none focus:shadow-none focus:outline-8 hover:outline-8 focus:outline-indigo-300 hover:outline-indigo-300 focus:outline-offset-4 hover:outline-offset-4 shadow-lg shadow-slate-300 border-2 border-indigo-600 bg-transparent text-indigo-600 hover:bg-indigo-50 focus:bg-indigo-50"
>
  some name
</button>
`;
